# voice-assistant

./: .gitignore  CMakeLists.txt  PKGBUILD  assistant.conf  assistant.cpp  assistant.h  assistant.service  cmdline.cpp  cmdline.h  config.cpp  config.h  constants.hpp  graphics.cpp  graphics.h  main.cpp  voice-assistant.desktop  voice-assistant.service
